--- a/src/app/pages/patient/patient.component.html
+++ b/src/app/pages/patient/patient.component.html
@@ -1,3 +1,4 @@
+<router-outlet></router-outlet>
 <mat-form-field>
   <mat-label>Filter</mat-label>
   <input matInput (keyup)="appyFilter($event)" placeholder="Search..." />
