--- a/src/app/pages/medic/medic.component.html
+++ b/src/app/pages/medic/medic.component.html
@@ -1,1 +1,48 @@
-<p>medic works!</p>
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" matSort>
+    <ng-container matColumnDef="idMedic">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+
+      <td mat-cell *matCellDef="let row">{{ row.idMedic }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="primaryName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>FirstName</th>
+      <td mat-cell *matCellDef="let row">{{ row.primaryName }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="surname">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>LastName</th>
+      <td mat-cell *matCellDef="let row">{{ row.surname }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="codMed">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>CodMed</th>
+      <td mat-cell *matCellDef="let row">{{ row.codMedic }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell *matCellDef="let row">
+        <button mat-button color="primary" (click)="openDialog(row)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-button color="accent" (click)="delete(row.idMedic)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+
+  <mat-paginator
+    [pageSizeOptions]="[5, 10, 25, 100]"
+    aria-label="Select page of medics"
+  ></mat-paginator>
+
+  <button mat-fab color="accent" style="float: right" (click)="openDialog()">
+    <mat-icon>add</mat-icon>
+  </button>
+</div>
