--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -24,7 +24,7 @@
   style="width: 800px; height: 800px"
 ></pdf-viewer>
 
-<!--<button
+<button
   mat-button
   color="primary"
   onclick="document.getElementById('flFile').click()"
@@ -48,4 +48,4 @@
   Upload
 </button>
 
-<img mat-card-image [src]="imageData" width="500" height="500" />-->
+<img mat-card-image [src]="imageData" width="500" height="500" />
