security implemented in app

--- a/src/app/pages/not404/not404.component.html
+++ b/src/app/pages/not404/not404.component.html
@@ -15,7 +15,7 @@
         PAGE NOT FOUND
         <small>Error 404</small>
       </h1>
-      <a routerLink="/pages/patient">Patient</a>
+      <a routerLink="/login">Login</a>
     </div>
   </body>
 </html>
